ui: fixed covering footer by services section in homepage

--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -122,14 +122,13 @@
 }
 
 .servicesContainer {
-    height: 436px;
     width: 100%;
 }
 
 .servicesWrapper {
     display: flex;
     width: 100%;
-    height: 100%;
+    min-height: 436px;
 }
 
 .serviceSection {
